# youi-tauri-app

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
doc/: app.db  commit.MD  rust.MD
doc/ui/daisy/: accordion.html  button.html  drawer.html  dropdown.html  modal.html  tooltip.html
doc/ui/tailwind/: layout.MD
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: app.init.sql
src-tauri/src/: lib.rs
src/lib/app-dao/: dao.d.ts  dao.util.ts
src/lib/app-dao/base/: area.data.ts  area.sql.ts  desktopItem.sql.ts  dslScript.sql.ts  icon.sql.ts
src/lib/app-dao/datamacro/: macroGroup.sql.ts  macroGroupItem.sql.ts  macroIndicator.sql.ts
src/lib/app-entity/: entity.d.ts
src/lib/app-icons/: address.ts  area.ts  backward.ts  chat.ts  console.ts  cube.ts  dataAnalysis.ts  database.ts  dataproc.ts  doc.ts  forward.ts  globe.ts  icons.ts  index.ts  metadata.ts  ml.ts  report.ts  tdt.ts  tree.ts
src/lib/app-page/: Header.svelte  LeftMenu.svelte  PageNav.svelte  SubMenu.svelte  page.clipboard.ts  page.log.ts  page.menu.ts  page.message.ts
src/lib/app-services/: service.d.ts  service.util.ts
src/lib/app-stores/: store.d.ts  tree.store.ts
src/lib/tauri/: FileDrop.svelte  dsl.ts  geo.ts
src/lib/youi/: index.d.ts  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(submenu)/: +layout.svelte  +layout.ts  readmd.MD
src/routes/terminal/: +layout.svelte  +layout.ts
(+283 files in other folders)
