[package]
name = "app"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.16", features = ["devtools"] }
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-log = "2.0.0-beta.0"
tauri-plugin-http = "2.0.0-beta.0"
tauri-plugin-sql = {version="2.0.0-beta.0",features = ["sqlite"] }
tauri-plugin-clipboard-manager = {version="1.1.0",path="../packages/plugins/clipboard-manager"}
tauri-plugin-dsl = {version="1.1.0",path="../packages/plugins/dsl"}
tauri-plugin-fs = "2.0.0-beta.5"
